<resources>
    <string name="app_name">Blatoph</string>
    <string name="header">Le Header</string>
    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="confirmer_mdp">Confirmer le mot de passe</string>
    <string name="confmdn">Confirmer le mot de passe</string>
    <string name="valider">Valider</string>
    <string name="logo_connexion_dscription">Log page de conn exion</string>
    <string name="creercompte">Créer le compte</string>
    <string name="prendre_photo">Prendre photo</string>
    <string name="pagecreation_cpt">Page de création de compte</string>
    <string name="parametre_cpt">Gestion des parametres du compte</string>
    <string name="amis">Vos amis</string>
    <string name="ajouter">Ajouter un ami</string>
    <string name="enregistrer">Enregistrer modifications</string>
    <string name="parametre">Parametres</string>
    <string name="album">Albums</string>
    <string name="nvx">Nouveau</string>
    <string name="liste_album">Liste des albums</string>
    <string name="liste_photo">Liste des photos</string>
    <string name="param_photo">Paramètre de la photo</string>
    <string name="titre_param_photo">Titre</string>
    <string name="legende_param_photo">Légende</string>
    <string name="ajouter_courant">Ajouter la photo à album courant</string>
    <string name="nouveau">Nouveau</string>
    <string name="nvx_album">Création album</string>
    <string name="creer_album">Créer nouvel album</string>
    <string name="amis_album">Partager avec Amis</string>
    <string name="amis_partage">Amis pour partage</string>
    <string name="titre_album">Titre de l\'album</string>
    <string name="nom">Nom</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="album_courant">Définir comme \n album courant</string>

</resources>
