<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_mdp2"
        android:text="@string/confmdn"
        android:layout_above="@+id/button_creation"
        android:layout_alignLeft="@+id/editText_mdp"
        android:layout_alignStart="@+id/editText_mdp"
        android:layout_marginBottom="22dp"
        android:textSize="18sp"/>

    <Button
        android:text="@string/creercompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:id="@+id/button_creation"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText_mdp2"
        android:layout_alignStart="@+id/editText_mdp2"
        android:layout_alignRight="@+id/editText_mdp2"
        android:layout_alignEnd="@+id/editText_mdp2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editText_mdp"
        android:text="@string/mdp"
        android:layout_below="@+id/editText_email"
        android:layout_alignLeft="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email"
        android:layout_marginTop="46dp" />

    <TextView
        android:id="@+id/nomPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_nom"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText_nom"
        android:layout_marginTop="48dp"
        android:text="@string/pagecreation_cpt"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText_nom"
        android:layout_above="@+id/editText_email"
        android:layout_alignLeft="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email"
        android:text="@string/email"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>