<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/param_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nvx_album" />

    <EditText
        android:id="@+id/titre_param_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/param_photo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />


    <Button
        android:id="@+id/amis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amis_album"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/titre_param_album"
        android:layout_alignStart="@+id/ajouter" />


    <Button
        android:id="@+id/ajouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:text="@string/creer_album" />
</RelativeLayout>

