<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/titrepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/amis_partage"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listView_amisPartage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="54dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/ajt_ami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/ajouter" />

    <Button
        android:id="@+id/valider"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/valider" />


</LinearLayout>