<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >






    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

          <TextView
            android:id="@+id/nompage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parametre_cpt"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            />

            <EditText
                android:id="@+id/utilisateur_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/nompage"
                android:layout_below="@+id/nompage"
                android:layout_marginTop="74dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/nompage"
            android:layout_below="@+id/nompage"
            android:layout_marginTop="74dp"
            android:ems="10"
            android:inputType="textEmailAddress" />



        <EditText
            android:id="@+id/mdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/email"
            android:layout_below="@+id/email"
            android:layout_marginTop="74dp"
            android:ems="10"
            android:inputType="textPassword" />

            <Button
                android:id="@+id/Amis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:text="@string/amis" />

            <Button
                android:id="@+id/enregistrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:text="@string/enregistrer" />

            <Button
                android:id="@+id/deconnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="74dp"
                android:text="@string/deconnexion" />

        </LinearLayout>



    </ScrollView>


</RelativeLayout>